--- a/css/main.css
+++ b/css/main.css
@@ -3,21 +3,15 @@
    تجميع ملفات التصميم
    ========================================= */
 
-/* 1. المتغيرات (الألوان والخطوط) */
-@import url('variables.css');
+@import url('variables.css');   /* 1. الألوان */
+@import url('layout.css');      /* 2. الهيكلة */
+@import url('components.css');  /* 3. العناصر */
+@import url('animations.css');  /* 4. الحركات  */
 
-/* 2. الهيكلة (إطار الجهاز واللابتوب) */
-@import url('layout.css');
-
-/* 3. العناصر (الأزرار والبطاقات) */
-@import url('components.css');
-
-/* تحسينات إضافية صغيرة للحركة */
 .screen {
     will-change: transform, opacity;
 }
 
-/* إصلاح التمرير في iOS */
 body {
     -webkit-overflow-scrolling: touch;
 }
